--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ body {
     height: 406px;
     margin: 10px;
     border-radius: 3px;
-    box-shadow: 0 0 3px 3px #e4e4e4;
+    box-shadow: 0 0 3px 3px #ffac85;
     transition: 1s;
 }
 
